app/assets/stylesheets/static_pages.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #2f8c4b;
  border-bottom: 2px solid black;
  height: 75px;
  width: 100%;
}

p {
  font-family: 'Nothing You Could Do', cursive;
  margin: 10px 0 10px 0;
}

label {
  font-family: 'Nothing You Could Do', cursive;
}

.header .redirect-button {
  font-family: 'Nothing You Could Do', cursive;
  height: 34px;
  text-align: center;
  width: auto;
  min-width: 100px;
  border-radius: 10px;
  font-size: 20px;
  margin-right: 5px;
}

.header .redirect-button:hover {
  cursor: pointer;
  background: gray;
}

.header p {
  font-family: 'Nothing You Could Do', cursive;
  align-self: flex-end;
}

.header .name-logo {
  display: flex;
}


h1 {
  font-family: 'Nothing You Could Do', cursive;
  margin: 10px;
}

.welcome {
  text-align: center;
  color: green;
}

.auth-form {
  display:  flex;
  flex-direction: column;
  align-items: center;
}


.auth-form .text {
  display: flex;
  width: 300px;
  height: 25px;
  margin: 5px;
  align-items: center;
}

.form-container span {
  font-family: sans-serif;
  font-size: 14px;
  color: red;
}
.auth-form .text-error {
  display: flex;
  width: 300px;
  height: 25px;
  margin: 5px;
  align-items: center;
  background: rgba(255,0,0,0.3);
}

.form-container h1 {
  border-bottom: 2px solid black;
}


.auth-form .text::placeholder {
  font-size: 10px;
  font-style: oblique;
}

.auth-form .submit {
  margin: 10px;
  width: 50px;
  font-family: 'Nothing You Could Do', cursive;
  height: 34px;
  text-align: center;
  width: auto;
  min-width: 75px;
  border-radius: 10px;
  font-size: 20px;

}

.auth-form .submit:hover {
  cursor: pointer;
  background: gray;
}

.form-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  margin-top: 40px;
}

.alt-link {
  font-family: sans-serif, italic;
}

.navbar {
  display: flex;
  flex-direction: column;
  width: 14%;
  background: #2f8c4b;
}

.list-nav span, li {
  font-family: 'Nothing You Could Do', cursive;
}



.list-nav .list-nav-head {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
  width: 60px;
  margin-left: 10px;
}

.list-nav .add-list-button {
  height: 14px;
  width: 14px;
  font-size: 12px;
  margin: 8px;
  border-radius: 10px;
  padding: 0;
  text-align: center;
  line-height: 10px;
}

.list-nav{
  display: flex;
  flex-direction: column;
  height: 100%;
  width: auto;
  min-width: 300px;
  min-height: 100%;
  background: #2f8c4b;
}

.home-content {
  display: flex;
  justify-content: space-between;
  height: 100%;
  min-height: 1000px;
}

.modal-screen {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 999;
  background: rgba(0, 0, 0, 0.7);
}

.modal-content {
  position: absolute;
  z-index: 1000;
  top: 50%;
  left: 50%;
  width: 400px;
  padding: 50px;
  margin-left: -250px;
  transform: translateY(-50%);
  background: white;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.list-list {
  list-style-type: none;
  margin-top: 0;
}

.edit-delete {
  font-family: 'Nothing You Could Do', cursive;
  text-align: center;
  border-radius: 10px;
  font-size: 12px;
  width: 50px;
  height: 22px;
}

.edit-delete:hover {
  cursor: pointer;
}

.list-action-modal {
  position: absolute;
  display: flex;
  background: white;
  flex-direction: column;
  width: 150px;
  z-index: 999;
  top: 18px;
  left: 50px;
  border: 1px solid black;
}

.list-action-option:hover {
  background: #7fdfff;
}

.welcome-logout {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.welcome-logout h1 {
  margin-right: 10px;
  color: white;
  font-size: 30px;
}

.list-list-el {
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 180px;
  border-bottom: 1px solid black;
  margin: 5px;
}

.dropdown-button {
  display: flex;
  align-items: center;
  width: 10px;
  height: 10px;
  font-size: 10px;
  text-align: center;
  border-radius: 10px;
}

.dropdown-button:hover {
  cursor: pointer;
}

.list-title-container {
  flex: 1;
}

.list-title-container:hover {
  cursor: pointer;
  background: #42f47d;
  color: white;
}

i:hover {
  cursor: pointer;
  color: #42f46b;
}

#title-errors {
  color: red;
  font-family: 'Nothing You Could Do', cursive;
}

.fa-events-icons-ready {
  height: 100%;
}

.new-task-form form {
  display: flex;
  flex-direction: column;
  min-width: 200px;
  max-width: 400px;
  align-items: center;
}

.new-task-form .task-title-input {
  width: 100%;
  height: 30px;
  font-size: large;
  margin-bottom: 10px;
  font-family: 'Nothing You Could Do', cursive;
}

.new-task-form .task-date-input {
  align-self: flex-end;
  margin-bottom: 10px;
  font-family: 'Nothing You Could Do', cursive;
}

.task-list {
  list-style: none;
  width: 100%;
}

.task-list li {
  padding: 5px;
  word-wrap: break-word;
  width: 100%;
  border-bottom: 1px solid black;
}

.task-list:hover {
  cursor: pointer;
}

.task-index {
  display: flex;
  flex-direction: column;
  width: 500px;
  justify-content: flex-start;
  margin-left: 100px;
  margin-top: 10px;
}

.task-checkbox {
  margin-right: 10px;
}

.all-tasks-link {
  font-family: 'Nothing You Could Do', cursive;
  text-decoration: none;
  color: black;
  border-bottom: 1px solid black;
  padding: 4px;
  margin: 10px;
}

.all-tasks-link:hover {
  background: #42f47d;
  color: white;
}

.task-show {
  display: flex;
  margin-top: 50px;
  margin-right: 300px;
  flex-direction: column;
  height: 200px;
  width: 500px;
  margin-left: 150px;
  padding: 10px;
  border: 1px solid;
}

.tasks-body {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.task-title-display {
  width: 500px;
  height: 25px;
  text-align: center;
  border: none;
  font-size: larger;
  font-family: 'Nothing You Could Do', cursive;
}

.task-title-display:hover {
  cursor: pointer;
}

.task-button {
  width: 20%;
  align-self: center;
}

.list-select {
  font-family: 'Nothing You Could Do', cursive;
  margin-bottom: 10px;
  font-size: large;
  height: 40px;
}

.task-form {
  display: flex;
  align-items: flex-end;
}

.list-option {
  font-family: 'Nothing You Could Do', cursive;
}

.submit, .task-button {
  font-family: 'Nothing You Could Do', cursive;
  text-align: center;
  border-radius: 10px;
  font-size: 16px;
  width: 40%;
}

.submit:hover {
  cursor: pointer;
  background: gray
}


.task-button:hover {
  cursor: pointer;
  background: gray
}

